Collabtive 1.1
+ Fixed bug in tasklist editing, which would automatically remove the tasklist's assignment to a given milestone
+ Fixed notice in user editing form which showed up when an available language's name was not translated in the selected language
+ Updated the template engine to smarty3 (mwirtz)
+ Updated the bundled tcpdf to 6.0 (mwirtz)

Collabtive 1.0
+ Added translations: Hebrew, Norwegian (Nynorsk), Taiwanese
+ Improved translations: Albanian, Arabic, Bulgarian, Danish, Farsi, French, German, Greek, Hungarian, Italian, Norwegian (Bokmål), Polish, Portuguese (Brazilian), Slovak, Serbian, Turkish
+ Added translations of install-readme: Hungarian
+ Improved translations of install-readme: Arabic
+ Changed name of autoload function to cl_autoload and added it with spl_autoload_register() to autoload list, to not interfere other autoloaders
+ Implemented automatic update notification.
+ Completely re-written the PDF export. It now uses a custom subclass of TCPDF to directly draw the tables for the reports from arrays instead of using an HTML intermediate.
  This greatly speeds up PDF generation (esp when many lines are exported) and generates much smaller PDFs.
+ Fixed problem with missing "webcolor" variable in TCPDF
+ Improved the project log PDF report by merging fields, improving shading and adding automatic font stretching.
+ Added new PDF report to the "my tasks" block on the desktop. Now a user can export all his tasks to PDF.
+ Re-enabled permissions checking when deleting a timetracker entry. This got disabled for testing purposes and was commited to trunk. Disabling it posed a possible security risk.
+ Added permissions checking to timetracker:add and timetracker:edit . Permissions set in the useraccount where not properly enforced for the timetracker before.
+ Rewrote the settings functionality to work with a key/value table as the datastore. This makes extensibility easier.