@@ -3,6 +3,8 @@ Collabtive 1.1
 + Fixed notice in user editing form which showed up when an available language's name was not translated in the selected language
 + Updated the template engine to smarty3 (mwirtz)
 + Updated the bundled tcpdf to 6.0 (mwirtz)
++ Change class.mylog to show 25 entries per log page instead of 10
++ Change inserting of default values to settings table to a single query (from a foreach loop) in install.php
 
 Collabtive 1.0
 + Added translations: Hebrew, Norwegian (Nynorsk), Taiwanese
